# amplify-monitor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  pattern_request.md
.github/rulesets/: main-branch.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: changelog.html  commands.html  configuration.html  getting-started.html  index.html  troubleshooting.html
docs/css/: style.css
docs/features/: aws-profiles.html  custom-domain.html  dashboard.html  diagnosis.html  optimization.html
docs/js/: main.js
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: cli.ts  index.ts
src/: amplify.rs  config.rs  lib.rs  logs.rs  main.rs  migration.rs  parser.rs
tests/: integration_tests.rs
vscode-extension/: .eslintrc.json  .vscodeignore  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  package-lock.json  package.json
vscode-extension/docs/: SCREENSHOTS.md
vscode-extension/schemas/: amplify-buildspec.schema.json
vscode-extension/snippets/: amplify.json
vscode-extension/src/: cli.ts  copilotParticipant.ts  diagnosisShare.ts  extension.ts  postPushWatcher.ts  quickFixes.ts  webhookNotifications.ts
vscode-extension/src/views/: appsTree.ts  awsProfileManager.ts  buildComparisonPanel.ts  buildCostPanel.ts  buildOptimizationWizard.ts  buildPerformancePanel.ts  buildQueuePanel.ts  bundleAnalyzerPanel.ts  customDomainValidator.ts  (+19 more)
