[package]
name = "amplify-monitor"
version = "0.1.0"
edition = "2021"
description = "CLI tool for monitoring AWS Amplify builds and diagnosing failures"
license = "MIT"
repository = "https://github.com/saga95/amplify-monitor"
keywords = ["aws", "amplify", "cli", "devops", "monitoring"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "amplify_monitor"
path = "src/lib.rs"

[[bin]]
name = "amplify-monitor"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
aws-config = "1"
aws-sdk-amplify = "1"
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
zip = "2"
flate2 = "1"
toml = "0.8"
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
